--- a/index.html
+++ b/index.html
@@ -140,10 +140,10 @@
                             <div class="col-lg-1" id="num"><div>num</div></div>
                             <div id="wrapper_content_week">
                                 <div class="col-lg-5" id="lessons_onClick">lesson
-                                    <div id="append_first"></div>
+                                    <div id="append_first" class="lessonsAndRoom"></div>
                                 </div>
                                 <div class="col-lg-5" id="room_onClick">room
-                                    <div id="append_two"></div>
+                                    <div id="append_two" class="lessonsAndRoom"></div>
                                 </div>
                             </div>
                         </div>
